env/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app-development
spec: {}
status: {}
