env/base/my-app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: myapp
    app.kubernetes.io/part-of: liberty
  name: myapp
  namespace: my-app-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: image-registry.openshift-image-registry.svc:5000/myapp-ci/myapp-runtime  
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
