env/base/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
  namespace: my-app-development
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: myapp
