env/base/my-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: myapp
  name: myapp-route
spec:
  to:
    kind: Service
    name: myapp
